# test_sonarqube_ccov

./: CMakeLists.txt  sonar-project.properties
.github/workflows/: build.yml
fake_inc/: em_i2c.h  sl_i2cspm.h  sl_status.h
inc/: lib.h  rfid_id12la.h  ut_id12la.h
src/: lib.c  main.c  rfid_id12la.c  sl_i2cspm.c  test1.c  ut_id12la.c
